--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -5,45 +5,16 @@ block pageOption
   - contentClass.push('index-container')
 
 block content
-  include mixins/_ga-link.pug
+  section.section-content.section-content-hero
+    img(src="../images/common/daikoku_top.png" alt="" class="hero-img")
+    img(src="../images/common/daikoku_top_label.png" alt="" class="label-img")
 
-  .fix-search-wrapper
-    section.section-content.section-search
-      .section-content-wrapper
-        .section-content-body.box-shadow
-          nav.nav
-            ul.nav-list
-              each item in globalNavi
-                - var className = "nav-item " + item.className
-                  li(
-                    class=className
-                  ) 
-                    a(
-                      href=item.link
-                      onClick="gtag('event', 'click', {'event_category': 'category', 'event_label': 'header', 'value': '"+ item.text + "'});"
-                    ) 
-                      h1
-                        =item.text
-                      i(class="fas fa-angle-right")
-          .content-search-wrapper
-            .content-search
-              .content-body
-                form(action="https://www.pref.fukui.lg.jp/search.html" class="form-main")
-                  .search-box
-                    input(
-                      type="text"
-                      class="text search-box-main"
-                      id="q"
-                      name="q"
-                      placeholder="キーワード検索"
-                    )
-                    button(
-                      accesskey="s"
-                      class="button-search"
-                      type="submit"
-                      onClick="gtag('event', 'click', {'event_category': 'search-free-word', 'event_label': 'header'});"
-                    )
-                      i(class="fas fa-search")
-                </form>
-            include parts/_search-keyword-list.pug
-            +featureKeywords('header')
+
+  section.section-content
+    include ../templates/parts/_life-menu.pug
+
+  section.section-content.section-content-new-info
+    include ../templates/parts/_new-info.pug
+
+  section.section-content
+    include ../templates/parts/_business-menu.pug
