--- a/src/templates/common/_header.pug
+++ b/src/templates/common/_header.pug
@@ -1,69 +1,12 @@
 header.header.x-header
   .header-wrapper.box-shadow
-    .conten-top
-      include ../mixins/_ga-link.pug
-      +gaLink(gaCategory.originalTop, 'logo', "https://www.pref.fukui.lg.jp/index3.html", "logo")
-        <svg xmlns="http://www.w3.org/2000/svg" width="117.789" height="28" viewBox="0 0 117.789 28">
-          <g id="logo" data-name="logo" transform="translate(-32 -12)">
-            <g id="Flag" transform="translate(32 12)">
-              <rect id="長方形_1" data-name="長方形 1" width="28" height="28" fill="#15152a" opacity="0"/>
-              <g id="Flag_of_Fukui_Prefecture_eee" transform="translate(1.421 1.421)">
-                <path id="パス_7" data-name="パス 7" d="M.767,293.348l.453-1.238,1.3.2a11.556,11.556,0,0,1,7.148,3.729,12.013,12.013,0,0,1,2.663,8.065v2.184a10.842,10.842,0,0,1-3.207-.795v-1.389c0-4.395-1.975-7.239-5.72-8.311a9.451,9.451,0,0,0-.2,1.893,9.576,9.576,0,0,0,9.124,9.5v3.216A12.791,12.791,0,0,1,0,297.69a12.593,12.593,0,0,1,.767-4.342Z" transform="translate(0 -284.834)" fill="#15152a"/>
-                <path id="パス_8" data-name="パス 8" d="M77.743,3.22a9.646,9.646,0,0,1,6.329,3.929A15.1,15.1,0,0,1,86.29,6.63l1.032-.163A12.865,12.865,0,0,0,65,6.467l1.032.163a15.1,15.1,0,0,1,2.218.519A9.645,9.645,0,0,1,74.579,3.22v8.607a11.953,11.953,0,0,1,1.582,3.74,11.986,11.986,0,0,1,1.582-3.74Z" transform="translate(-63.375 -0.001)" fill="#15152a"/>
-                <path id="パス_9" data-name="パス 9" d="M542.264,293.348l-.453-1.238-1.3.2a11.556,11.556,0,0,0-7.148,3.729,12.013,12.013,0,0,0-2.663,8.065v2.184a10.841,10.841,0,0,0,3.207-.795v-1.389c0-4.395,1.975-7.239,5.719-8.311a9.451,9.451,0,0,1,.2,1.893,9.576,9.576,0,0,1-9.124,9.5v3.216a12.791,12.791,0,0,0,12.331-12.715A12.589,12.589,0,0,0,542.264,293.348Z" transform="translate(-517.459 -284.834)" fill="#15152a"/>
-              </g>
-            </g>
-            <path id="パス_10" data-name="パス 10" d="M26.468-30.942c.227,0,.312-.114.312-.285,0-.256-.2-.484-.937-1.139-1.448-1.31-1.59-1.4-1.873-1.4-.341,0-.511.2-2.129,2.249H15.369a31.787,31.787,0,0,1-3.435-.2l.255.968c1.646-.142,2.328-.2,3.179-.2Zm-9.4,3.189a13.423,13.423,0,0,0-3.6-1.082,25.36,25.36,0,0,1,.085,2.847c0,1.053-.114,3.5-.114,4.1,0,.626.284.826,1.135.826,1.618,0,2.1-.4,2.1-1.053v-.427h4.882v.085c0,.74.114.911,1.079.911,1.732,0,2.242-.655,2.242-1.31,0-.484-.085-2.05-.085-2.847v-.683c.426-.427.6-.569.6-.826,0-.228-.284-.456-1.476-1.31-.738-.541-.908-.626-1.135-.626-.255,0-.369.085-1.448,1.4Zm-.4,4.641v-3.843c.142-.085.227-.171.312-.228h4.57v4.071Zm-1.05,3.587c-.284-.256-1.135-.6-3.52-1.139.057.74.085,1.452.085,2.448-.341-1.338-1.7-2.448-4.258-2.648v-.4c.6-.285.738-.427.738-.626,0-.142-.17-.313-.738-.484a25.544,25.544,0,0,0,3.35-4.384c.852-.313,1.107-.512,1.107-.769,0-.37-.114-.512-1.05-1.338-1.192-1.053-1.391-1.11-1.59-1.11-.227,0-.369.085-1.675,1.708H7.9v-3.7c.965-.342,1.107-.6,1.107-.854,0-.37-.255-.6-4.513-1.053a23.123,23.123,0,0,1,.142,2.847v2.762a29.337,29.337,0,0,1-3.548-.2l.255.968a25.639,25.639,0,0,1,3.406-.2H8.017A27.7,27.7,0,0,1,.58-17.533c-.142.114.057.342.2.256a25.1,25.1,0,0,0,3.974-2.335l-.085,3.16c-.114,5.039-.227,7.658-.227,8.228,0,.74.17,1.025,1.306,1.025,1.618,0,2.214-.37,2.214-1.167,0-2.135-.028-6.064-.028-9.879v-2.107a4.087,4.087,0,0,1,1.192,3.16c.028,1.167.6,1.623,1.419,1.623a1.69,1.69,0,0,0,1.646-1.281c0,5.523-.142,8-.142,8.541,0,.712.114.826,1.05.826,1.448,0,2.1-.228,2.1-1.053v-.911h8.09v.541c0,.712.255.911,1.079.911,1.419,0,2.384-.342,2.384-1.281,0-.712-.17-3.1-.17-6.463v-2.135c.511-.456.653-.626.653-.883,0-.2-.114-.37-1.05-1.11-1.221-.968-1.476-1.139-1.76-1.139s-.426.171-1.533,1.48Zm5.138,9.509v-4.441h2.526v4.441ZM15.2-14.458h2.356v4.441H15.2Zm5.564-3.957c.341-.228.426-.313.426-.541h2.1v3.929H20.762Zm-3.236-.541c.028.456.028.94.028,1.424v2.505H15.2v-3.616a2.894,2.894,0,0,0,.454-.313Zm30.884.085v-7.345H54.4c.227,0,.369-.114.369-.313,0-.228-.284-.541-1.249-1.452-1.363-1.31-1.533-1.4-1.845-1.4-.255,0-.369.142-2.3,2.591H48.41v-5.068c.852-.456,1.05-.655,1.05-1,0-.4-.341-.712-4.74-1.11a71.272,71.272,0,0,1,.17,7.175H40.405v-4.982c.681-.37.965-.655.965-1,0-.427-.369-.683-4.8-1.11a57.05,57.05,0,0,1,.17,7.089h-2.3c-.993,0-2.129-.057-4-.2l.284.968c1.618-.142,2.725-.2,3.719-.2h2.3v.826c0,2.7-.057,4.811-.227,6.52h-2.64c-.993,0-2.129-.057-4-.2l.284.968c1.618-.142,2.725-.2,3.719-.2h2.583a15.566,15.566,0,0,1-.937,4.157,12.447,12.447,0,0,1-6.415,6.861c-.142.085-.028.313.142.285,4.088-1.053,7.068-3.018,8.856-5.58A11.705,11.705,0,0,0,40.093-18.3h4.769c-.057,6.121-.2,9.4-.2,10.05,0,.911.255,1.025,1.5,1.025,1.59,0,2.413-.37,2.413-1.2,0-.6-.114-3.7-.142-9.879h7.238c.227,0,.369-.114.369-.313s-.227-.484-1.249-1.452c-1.675-1.594-1.845-1.68-2.157-1.68-.341,0-.454.171-2.583,2.875Zm-8.26,0c.17-1.68.255-3.758.255-6.491v-.854H44.89v3.132c0,1.537,0,2.932-.028,4.214Zm29.493-2.363h6.131c0,1,.142,1.367,1.306,1.367,1.817,0,2.413-.569,2.413-1.367,0-.484-.17-1.993-.17-5.495v-3.787c.681-.569.738-.683.738-.94s-.114-.4-1.107-1.2c-1.419-1.139-1.561-1.167-1.845-1.167s-.369.085-1.59,1.424H70.125c-.227-.285-1.164-.6-4-1.11a37,37,0,0,1,.142,4.612c0,5.324-.085,7.772-.085,8.513,0,.712.142,1.082,1.164,1.082,1.5,0,2.3-.427,2.3-1.224Zm6.131-7.089v2.932H69.642v-2.932Zm0-3.5v2.932H69.642v-2.591a1.645,1.645,0,0,0,.4-.342ZM69.642-21.8v-3.018h6.131V-21.8Zm-4.826,4.868c-.17.4-.312.769-.454,1.025-1.7,3.246-4.4,6.52-6.557,7.772-.142.085-.028.313.142.285a23.25,23.25,0,0,0,9.623-5.922c.965-.057,1.249-.228,1.249-.6C68.819-14.714,68.592-14.97,64.817-16.935Zm9.225.769c-.17,0-.255.2-.114.285a11.513,11.513,0,0,1,4.911,5.523c.483,1.082.993,1.537,1.845,1.537A1.959,1.959,0,0,0,82.643-10.9C82.643-13.291,79.946-15.881,74.042-16.166ZM63.511-18.3V-29.86c.624-.37.738-.512.738-.854,0-.37-.426-.683-4.428-1.253.114,1.053.142,2.192.142,8.37,0,5.495-.17,6.947-.17,7.6,0,.769.17.968,1.164.968,1.873,0,2.555-.342,2.555-1.367v-1.338h5.9c.028.74.028,1.566.028,3.5,0,2.819-.114,5.239-.114,6.093,0,.8.227.911,1.448.911,1.93,0,2.413-.541,2.413-1.338,0-.626-.17-3.018-.17-5.523V-17.02c.454-.2.71-.4.738-.712H83.92a.323.323,0,0,0,.341-.313c0-.228-.057-.342-1.107-1.338-1.476-1.424-1.59-1.48-1.9-1.48s-.369.085-2.356,2.562Z" transform="translate(65.528 46.67)" fill="#15152a"/>
-          </g>
-        </svg>
+    .conten-top.layout-default
+      .icon-wrapper
+        img(src="../images/common/daikoku-icon.png" alt="大黒市" class="logo")
 
       include ./_accessibility.pug
 
-      .content-search.display-none
-        .content-body
-          .content-form
-            form(action="https://www.pref.fukui.lg.jp/search.html" class="search-box form-header")
-              input(
-                type="text"
-                class="text search-box-header"
-                id="q_header"
-                name="q"
-                placeholder="検索"
-              )
-              button(
-                accesskey="s"
-                class="button-search button-search-header"
-                type="submit"
-                onClick="gtag('event', 'click', {'event_category': 'search-free-word', 'event_label': 'header'});"
-              )
-                i(class="fas fa-search")
-          .icon-menu-icon.x-search-menu-trigger
-            .menu-icon
-              i(class="fas fa-times close-icon")
-            .menu-text
-              | 閉じる
-      .icon-menu-icon.x-global-mune-trigger
-        .menu-icon.menu-open
-          img(src=pathImage + "common/menu_icon.png" alt="メニュー" class="menu-img")
-        .menu-icon.menu-close
-          i(class="fas fa-times close-icon")
-        .menu-text
-          | メニュー
 
-    .conten-bottom
-      - var additionalValue  = "-sp"
-      include ./_accessibility.pug
-      nav.nav
-        ul.nav-list
-          each item in globalNavi
-            li.nav-item 
-              a(
-                href=item.link
-                onClick="gtag('event', 'click', {'event_category': 'category', 'event_label': 'header', 'value': '"+ item.text + "'});"
-              ) 
-                h1 
-                  =item.text
-                i(class="fas fa-angle-right")
 
 
 
