--- a/src/templates/parts/_business-menu.pug
+++ b/src/templates/parts/_business-menu.pug
@@ -32,5 +32,8 @@
                 alt=""
                 class="business-menu-icon"
               )
-            p.business-menu-text
-              = menu.text
+            .business-menu-text-container
+              p.business-menu-text
+                = menu.text
+              .icon-wrapper
+                i(class="fas fa-chevron-circle-right")
