feat: 人生の出来事メニュー追加

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -10,5 +10,6 @@
 @import "parts/life-menu";
 @import "parts/new-info";
 @import "parts/business-menu";
+@import "parts/life-scene";
 @import "common/footer";
 @import "page/index";
