--- a/src/templates/parts/_life-menu.pug
+++ b/src/templates/parts/_life-menu.pug
@@ -2,39 +2,48 @@
   const lifeMenu = [
     {
       icon: "life_menu_icon_1.png",
-      text: "妊娠から子育て"
+      text: "妊娠から子育て",
+      link: "#"
     },
     {
       icon: "life_menu_icon_2.png",
-      text: "入園・入学"
+      text: "入園・入学",
+      link: "#"
     },
     {
       icon: "life_menu_icon_3.png",
-      text: "就職から退職まで"
+      text: "就職から退職まで",
+      link: "#"
     },
     {
       icon: "life_menu_icon_4.png",
-      text: "結婚・離婚"
+      text: "結婚・離婚",
+      link: "#"
     },
     {
       icon: "life_menu_icon_5.png",
-      text: "高齢・介護"
+      text: "高齢・介護",
+      link: "#"
     },
     {
       icon: "life_menu_icon_6.png",
-      text: "引越し"
+      text: "引越し",
+      link: "#"
     },
     {
       icon: "life_menu_icon_7.png",
-      text: "病気・けが"
+      text: "病気・けが",
+      link: "#"
     },
     {
       icon: "life_menu_icon_8.png",
-      text: "お悔やみ"
+      text: "お悔やみ",
+      link: "#"
     },
     {
       icon: "",
-      text: "あなたの状況・ご用件を選んで探す"
+      text: "あなたの状況・ご用件を選んで探す",
+      link: "./search.html"
     },
   ]
 
@@ -54,7 +63,7 @@ mixin iconImg(fileName)
   ul.life-menu-list
     each menu in lifeMenu
       li.life-menu-item.box-shadow 
-        a(href="#") 
+        a(href=menu.link) 
           .menu-item-container
             +iconImg(menu.icon)
             .menu-text-container
