feat: あなたの状況メニュー追加

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -11,5 +11,6 @@
 @import "parts/new-info";
 @import "parts/business-menu";
 @import "parts/life-scene";
+@import "parts/status";
 @import "common/footer";
 @import "page/index";
