--- a/src/templates/parts/_life-scene.pug
+++ b/src/templates/parts/_life-scene.pug
@@ -62,7 +62,7 @@
     },
   ]
 
-.life-scene-container.layout-default
+.search-menu-container.life-scene-container.layout-default
   h2.life-scene-title
     | 人生の出来事
   ul.life-scene-list 
