--- a/src/templates/search.pug
+++ b/src/templates/search.pug
@@ -3,3 +3,6 @@ extends common/_layout
 block content
   section.section-content
     include ../templates/parts/_life-scene.pug
+
+  section.section-content.bg-light
+    include ../templates/parts/_status.pug
