--- a/src/templates/search.pug
+++ b/src/templates/search.pug
@@ -6,3 +6,6 @@ block content
 
   section.section-content.bg-light
     include ../templates/parts/_status.pug
+
+  section.section-content
+    include ../templates/parts/_matters.pug
