feat: ライフシーンヘッダー追加

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -10,6 +10,7 @@
 @import "parts/life-menu";
 @import "parts/new-info";
 @import "parts/business-menu";
+@import "parts/life-scene-header";
 @import "parts/life-scene";
 @import "parts/status";
 @import "parts/matters";
