--- a/src/templates/parts/_status.pug
+++ b/src/templates/parts/_status.pug
@@ -90,7 +90,7 @@
       li.status-item.box-shadow
         label(
           class="checkbox"
-          for="status" + item.value
+          for="status-" + item.value
         )
           input(
             id="status-" + item.value
