--- a/src/templates/parts/_life-scene.pug
+++ b/src/templates/parts/_life-scene.pug
@@ -67,7 +67,7 @@
     | 人生の出来事
   ul.life-scene-list 
     each item in lifeScene 
-      li.life-scene-item.box-shadow
+      li.life-scene-item
         label(
           class="checkbox"
           for="life-scene-" + item.value
