--- a/src/templates/parts/_matters.pug
+++ b/src/templates/parts/_matters.pug
@@ -87,7 +87,7 @@
     | ご用件
   ul.matters-list 
     each item in matters 
-      li.matters-item.box-shadow
+      li.matters-item
         label(
           class="checkbox"
           for="matters-" + item.value
