--- a/src/templates/parts/_status.pug
+++ b/src/templates/parts/_status.pug
@@ -87,7 +87,7 @@
     | あなたの状況
   ul.status-list 
     each item in status 
-      li.status-item.box-shadow
+      li.status-item
         label(
           class="checkbox"
           for="status-" + item.value
