fix: チェックボックス修正

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -5,6 +5,8 @@
 @import "base/base";
 @import "base/contrast";
 @import "base/magnify";
+@import "base/checkbox";
+@import "base/button";
 @import "common/accessibility";
 @import "common/breadcrumb";
 @import "common/header";
