--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -22,6 +22,15 @@ body {
 .box-shadow {
 	box-shadow: 0px 4px 8px rgba($color: #000000, $alpha: 0.16);
 }
+.visually-hidden {
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
+	position: absolute;
+	white-space: nowrap;
+}
 .section-title {
 	font-size: 30px;
 	font-weight: bold;
