--- a/src/stylesheets/parts/_life-scene.scss
+++ b/src/stylesheets/parts/_life-scene.scss
@@ -1,96 +1,6 @@
-$checkbox-size: 24px;
-$checkbox-border-radius: 4px;
-$checkbox-bg: #008660;
-$checkbox-border-color: #ccc;
-
-.btn {
-	padding: 12px 48px;
-	border-radius: 50px;
-	font-weight: bold;
-	font-size: 24px;
-}
-
-.btn-primary {
-	background-color: #008660;
-	color: #fff;
-}
-
 .search-btn-wrapper {
 	display: flex;
 	justify-content: center;
-}
-
-.visually-hidden {
-	clip: rect(0 0 0 0);
-	clip-path: inset(50%);
-	height: 1px;
-	width: 1px;
-	overflow: hidden;
-	position: absolute;
-	white-space: nowrap;
-}
-.checkbox {
-	display: block;
-	padding: 16px 0 16px 32px;
-
-	.checkbox-input {
-		&:checked + .checkbox-label::before {
-			color: #fff;
-			border-color: $checkbox-bg;
-			background-color: $checkbox-bg;
-		}
-		&:focus + .checkbox-label::before {
-			box-shadow: 0 0 0 2px rgba($checkbox-bg, 0.3);
-			border: 2px solid $checkbox-bg;
-		}
-
-		&:checked + .checkbox-label::after {
-			transform: translateY(-50%) scale(1);
-		}
-	}
-	.checkbox-label {
-		position: relative;
-		margin-bottom: 0;
-		vertical-align: middle;
-		width: 100%;
-		padding-left: 16px;
-
-		&::before {
-			content: "";
-			position: absolute;
-			top: 50%;
-			left: -($checkbox-size - 8px);
-			display: block;
-			width: $checkbox-size;
-			height: $checkbox-size;
-			box-sizing: border-box;
-			transform: translateY(-50%);
-			pointer-events: none;
-			background-color: #fff;
-			border: 1px solid $checkbox-border-color;
-			border-radius: $checkbox-border-radius;
-			transition: background-color 0.3s cubic-bezier(0.19, 1, 0.22, 1),
-				border-color 0.3s cubic-bezier(0.19, 1, 0.22, 1),
-				box-shadow 0.3s cubic-bezier(0.19, 1, 0.22, 1);
-		}
-		&::after {
-			content: "";
-			position: absolute;
-			top: 50%;
-			left: -($checkbox-size - 8px);
-			display: block;
-			width: $checkbox-size;
-			height: $checkbox-size;
-			box-sizing: border-box;
-			transform: translateY(-50%) scale(0);
-			background-repeat: no-repeat;
-			background-size: 50% 50%;
-			background-position: center center;
-			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
-			transition: background-color 0.3s cubic-bezier(0.19, 1, 0.22, 1),
-				transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
-		}
-	}
 }
 .life-scene-title {
 	font-size: 30px;
@@ -116,9 +26,15 @@ $checkbox-border-color: #ccc;
 	gap: 8px;
 
 	.life-scene-item {
-		border: 1px solid global-color(primary);
+		border: 1px solid #e1e1e1;
 		background-color: #fff;
 		border-radius: 8px;
 		width: calc(100% / 4 - 8px);
+		&:hover {
+			background-color: #008660;
+			color: #fff;
+			cursor: pointer;
+			transition: 0.2s;
+		}
 	}
 }
