--- a/src/stylesheets/parts/_status.scss
+++ b/src/stylesheets/parts/_status.scss
@@ -29,9 +29,15 @@
 	gap: 8px;
 
 	.status-item {
-		border: 1px solid global-color(primary);
+		border: 1px solid #e1e1e1;
 		background-color: #fff;
 		border-radius: 8px;
 		width: calc(100% / 4 - 8px);
+		&:hover {
+			background-color: #008660;
+			color: #fff;
+			cursor: pointer;
+			transition: 0.2s;
+		}
 	}
 }
