fix: ラジオボタン修正

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -6,6 +6,7 @@
 @import "base/contrast";
 @import "base/magnify";
 @import "base/checkbox";
+@import "base/radio";
 @import "base/button";
 @import "common/accessibility";
 @import "common/breadcrumb";
