--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -6,8 +6,8 @@ block pageOption
 
 block content
   section.section-content.section-content-hero
-    img(src="../images/common/daikoku_top.png" alt="" class="hero-img")
-    img(src="../images/common/daikoku_top_label.png" alt="" class="label-img")
+    img(src="../images/top/daikoku_top.png" alt="" class="hero-img")
+    img(src="../images/top/daikoku_top_label.png" alt="" class="label-img")
 
 
   section.section-content
