--- a/src/templates/parts/_business-menu.pug
+++ b/src/templates/parts/_business-menu.pug
@@ -28,7 +28,7 @@
           .business-menu-item-container
             .icon-container
               img(
-                src="../images/common/" + menu.icon
+                src="../images/top/" + menu.icon
                 alt=""
                 class="business-menu-icon"
               )
