--- a/src/templates/parts/_life-menu.pug
+++ b/src/templates/parts/_life-menu.pug
@@ -50,7 +50,7 @@
 mixin iconImg(fileName)
   if fileName
     img(
-      src="../images/common/" + fileName
+      src="../images/top/" + fileName
       alt=""
       class="life-menu-icon"
     )
