--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -8,8 +8,9 @@
 @import "base/checkbox";
 @import "base/radio";
 @import "base/button";
-@import "common/accessibility";
+@import "base/textfield";
 @import "common/breadcrumb";
+@import "common/accessibility";
 @import "common/header";
 @import "parts/life-menu";
 @import "parts/new-info";
